# workshop-aovivo-airflow

./: .env  Dockerfile  README.md  exemplo_01.py  exemplo_04.py  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: api_to_postgres.py  main.py  minha_primeira_dag.py  minha_quarta_dag.py  minha_quinta_dag.py  minha_segunda_dag.py  minha_setima_dag.py  minha_sexta_dag.py  minha_terceira_dag.py
include/: controller.py
